--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -1,5 +1,5 @@
 {%extends 'shop/base.html'%}
-{%block body%}
+{%block content%}
     <div comment-blog style="padding-top: 70px; padding-left: 0px; padding-right: 0px">
 {% with comments.count as total_comments %}
     <h2>
