--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -3,7 +3,7 @@
 {% block title %}EasyToShop{% endblock %}
 
 
-{% block body %}
+{% block content %}
 
      <!--Banner-->
     <div class="banner">
