--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -8,23 +8,24 @@ body {
 
 }
 .thumbnail{
-    width: 300px;
-    // or you could use percentage values for responsive layout
-    // width : 100%;
-    height: 280px;
+    width: 400px;
+    height: 320px;
     overflow: auto;
+    padding-left: 20px;
+   box-shadow: 0 0 10px rgba(0,0,0,0.5)
 }
 .thumbnail img{
     padding: 0px;
     width: 300px;
     height: 300px;
+
 }
+
 @font-face {
-  font-family: 'Satisfy';
+  font-family: 'Muli';
   font-style: normal;
-  font-weight: 400;
-  src: local('Satisfy'), url(http://fonts.gstatic.com/s/satisfy/v6/2OzALGYfHwQjkPYWELy-cw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+  font-weight: 200;
+
 }
 
 
@@ -97,6 +98,12 @@ Banner
     background-size: cover;
 	height: 975px;
     position: relative;
+}
+.banner_store_list{
+    background-color: whitesmoke;
+    background-size: cover;
+    position: relative;
+
 }
 .bg-color{
 	background-color: RGBA(12, 11, 11, 0.6);
@@ -415,3 +422,67 @@ Footer
 #myNavbar{
     font-size: 20px;
 }
+
+.col-lg-2{
+    padding-top: 150px;
+    padding-left: 0px;
+
+}
+.col-lg-9{
+    padding-top: 100px;
+    padding-left: 0px;
+}
+.col-lg-6{
+    padding: 20px;
+}
+
+
+.list-group{
+
+    font-size: 20px;
+    font-family: Prosto One;
+    color: #555555;
+    padding-top: 20px;
+
+
+}
+.list-group a{
+    border: none;
+    background-color: whitesmoke;
+
+}
+.caption{
+    padding-left: 0px;
+    font-family: Merriweather Sans;
+    text-transform: capitalize;
+    font-size: 40px;
+    text-align: center;
+
+
+}
+#store{
+    padding-top: 20px;
+}
+.showcase-item-header{
+    font-family: Roboto;
+    color: black;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 23px;
+}
+.showcase-item-header-link{
+     padding-top: 10px;
+     padding-left: 10px;
+     text-decoration: none!important;
+     font-size: 13px;
+     color: slategray;
+
+}
+.showcase-item-thumbnail{
+    padding-top: 10px;
+
+
+
+}
+
+
