--- a/shop/templates/shop/store_search.html
+++ b/shop/templates/shop/store_search.html
@@ -5,21 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-lg-2">
-                <div class="list-group" style="text-after-overflow: none">
-                    <a href="#" class="list-group-item">All</a>
-                    <a href="#" class="list-group-item">General</a>
-                    <a href="#" class="list-group-item">Men </a>
-                    <a href="#" class="list-group-item">Women</a>
-                    <a href="#" class="list-group-item">Maternity </a>
-                    <a href="#" class="list-group-item">Kids </a>
-                    <a href="#" class="list-group-item">Sport </a>
-                    <a href="#" class="list-group-item">Shoes </a>
-                    <a href="#" class="list-group-item">Accessories</a>
-                    <a href="#" class="list-group-item">Underwear </a>
-                </div>
-            </div>
-
+          {%include 'shop/store_groups.html'%}
 
           <div class="col-lg-9">
               {% if request.GET.q|length  == 0%}
